--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="center">
     <div class="logo">
-        <img id="logo" src="images/logo.png" alt="Sing Studio logo" width="600">
+        <img id="logo" src="logo.png" alt="Sing Studio logo" width="600">
     </div>
     <h1>My name is Bella Santos! </h1>
     <h2>I'm a first year Graphic Communications Major. </h2>
