--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <nav>
     <ul><li>
-        </li><a href="https://www.behance.net"> My world</a>
-        <li><a href="https://www.linkedin.com/in/copy-yourlinkedin-address-here"
+        </li><a href="https://www.behance.net/bellasantos8"> My world</a>
+        <li><a href="https://https://www.linkedin.com/in/bella-santos-/"
 target="_blank">LinkeIn </a><li>
         </li><a href=mailto:"bsanto11@calpoly.edu" >Email Me </a></li>
         </ul>
