--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <nav>
     <ul><li>
         </li><a href="https://www.behance.net/bellasantos8"> My world</a>
-        <li><a href="https://https://www.linkedin.com/in/bella-santos-/"
+        <li><a href="https://www.linkedin.com/in/bella-santos-/"
 target="_blank">LinkeIn </a><li>
         </li><a href=mailto:"bsanto11@calpoly.edu" >Email Me </a></li>
         </ul>
